fix footer and overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,6 @@ h2 {
   transform: translate(-50%, 5%);
 }
 
+html, body {
+  overflow-x: hidden;
+}
